Replace relative paths with absolute paths using SrcDir variable.
This change improves project maintenance and enhances resilience to
directory relocations by standardizing paths with the SrcDir variable.

--- a/src/game/KnightOnLine.vcxproj
+++ b/src/game/KnightOnLine.vcxproj
@@ -123,85 +123,85 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\common\Implode.h" />
-    <ClInclude Include="..\common\JvCryption.h" />
-    <ClInclude Include="..\common\N3Utils.h" />
-    <ClInclude Include="..\engine\N3Base\JpegFile.h" />
-    <ClInclude Include="..\engine\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\engine\N3Base\DFont.h" />
-    <ClInclude Include="..\engine\N3Base\Jpeg.h" />
-    <ClInclude Include="..\engine\N3Base\LogWriter.h" />
-    <ClInclude Include="..\engine\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\engine\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\engine\N3Base\N3AnimatedTexures.h" />
-    <ClInclude Include="..\engine\N3Base\N3AnimControl.h" />
-    <ClInclude Include="..\engine\N3Base\N3AnimKey.h" />
-    <ClInclude Include="..\engine\N3Base\N3Base.h" />
-    <ClInclude Include="..\engine\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\engine\N3Base\N3Board.h" />
-    <ClInclude Include="..\engine\N3Base\N3Camera.h" />
-    <ClInclude Include="..\engine\N3Base\N3Chr.h" />
-    <ClInclude Include="..\engine\N3Base\N3Cloak.h" />
-    <ClInclude Include="..\engine\N3Base\N3Cloud.h" />
-    <ClInclude Include="..\engine\N3Base\N3ColorChange.h" />
-    <ClInclude Include="..\engine\N3Base\N3Eng.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXBundle.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXDef.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPartBase.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPartBillBoard.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPartBottomBoard.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXParticle.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPartMesh.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPartParticles.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPlug.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPMesh.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXPMeshInstance.h" />
-    <ClInclude Include="..\engine\N3Base\N3FXShape.h" />
-    <ClInclude Include="..\engine\N3Base\N3GERain.h" />
-    <ClInclude Include="..\engine\N3Base\N3GESnow.h" />
-    <ClInclude Include="..\engine\N3Base\N3GlobalEffect.h" />
-    <ClInclude Include="..\engine\N3Base\N3IMesh.h" />
-    <ClInclude Include="..\engine\N3Base\N3Joint.h" />
-    <ClInclude Include="..\engine\N3Base\N3Light.h" />
-    <ClInclude Include="..\engine\N3Base\N3Log.h" />
-    <ClInclude Include="..\engine\N3Base\N3Mesh.h" />
-    <ClInclude Include="..\engine\N3Base\N3Mng.h" />
-    <ClInclude Include="..\engine\N3Base\N3Moon.h" />
-    <ClInclude Include="..\engine\N3Base\N3PMesh.h" />
-    <ClInclude Include="..\engine\N3Base\N3PMeshInstance.h" />
-    <ClInclude Include="..\engine\N3Base\N3Pond.h" />
-    <ClInclude Include="..\engine\N3Base\N3River.h" />
-    <ClInclude Include="..\engine\N3Base\N3Shape.h" />
-    <ClInclude Include="..\engine\N3Base\N3ShapeExtra.h" />
-    <ClInclude Include="..\engine\N3Base\N3ShapeMgr.h" />
-    <ClInclude Include="..\engine\N3Base\N3Skin.h" />
-    <ClInclude Include="..\engine\N3Base\N3Sky.h" />
-    <ClInclude Include="..\engine\N3Base\N3SkyMng.h" />
-    <ClInclude Include="..\engine\N3Base\N3SndDef.h" />
-    <ClInclude Include="..\engine\N3Base\N3SndMgr.h" />
-    <ClInclude Include="..\engine\N3Base\N3SndObj.h" />
-    <ClInclude Include="..\engine\N3Base\N3SndObjStream.h" />
-    <ClInclude Include="..\engine\N3Base\N3Star.h" />
-    <ClInclude Include="..\engine\N3Base\N3Sun.h" />
-    <ClInclude Include="..\engine\N3Base\N3TableBase.h" />
-    <ClInclude Include="..\engine\N3Base\N3Texture.h" />
-    <ClInclude Include="..\engine\N3Base\N3Transform.h" />
-    <ClInclude Include="..\engine\N3Base\N3TransformCollision.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIArea.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIBase.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIButton.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIDef.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIEdit.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIImage.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIList.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIProgress.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIScrollBar.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIStatic.h" />
-    <ClInclude Include="..\engine\N3Base\N3UIString.h" />
-    <ClInclude Include="..\engine\N3Base\N3UITooltip.h" />
-    <ClInclude Include="..\engine\N3Base\N3UITrackBar.h" />
-    <ClInclude Include="..\engine\N3Base\N3VMesh.h" />
-    <ClInclude Include="..\engine\N3Base\WaveFile.h" />
+    <ClInclude Include="$(SrcDir)\common\Implode.h" />
+    <ClInclude Include="$(SrcDir)\common\JvCryption.h" />
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\JpegFile.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\DFont.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\Jpeg.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\LogWriter.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimatedTexures.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimControl.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimKey.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Base.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Board.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Camera.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Chr.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Cloak.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Cloud.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ColorChange.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXBundle.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXDef.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBase.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBillBoard.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBottomBoard.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXParticle.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartParticles.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPlug.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPMeshInstance.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXShape.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GERain.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GESnow.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GlobalEffect.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3IMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Joint.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Light.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Log.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Mesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Mng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Moon.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Pond.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3River.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Shape.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ShapeExtra.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ShapeMgr.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Skin.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Sky.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SkyMng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SndDef.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SndMgr.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SndObj.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SndObjStream.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Star.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Sun.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3TableBase.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Transform.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3TransformCollision.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIArea.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIBase.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIButton.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIDef.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIEdit.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIImage.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIList.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIProgress.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIScrollBar.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIStatic.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UIString.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UITooltip.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3UITrackBar.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3VMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\WaveFile.h" />
     <ClInclude Include="APISocket.h" />
     <ClInclude Include="Bird.h" />
     <ClInclude Include="BirdMng.h" />
@@ -313,78 +313,78 @@
     <ClInclude Include="WarMessage.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\common\Implode.cpp" />
-    <ClCompile Include="..\common\JvCryption.cpp" />
-    <ClCompile Include="..\engine\N3Base\JpegFile.cpp" />
-    <ClCompile Include="..\engine\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\engine\N3Base\DFont.cpp" />
-    <ClCompile Include="..\engine\N3Base\Jpeg.cpp" />
-    <ClCompile Include="..\engine\N3Base\LogWriter.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3AnimatedTexures.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3AnimControl.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3AnimKey.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Board.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Camera.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Chr.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Cloak.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Cloud.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3ColorChange.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXBundle.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPartBase.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPartBillBoard.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPartBottomBoard.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXParticle.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPartMesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPartParticles.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPlug.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPMesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXPMeshInstance.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3FXShape.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3GERain.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3GESnow.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3GlobalEffect.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3IMesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Joint.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Light.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Log.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Mesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Moon.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3PMesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3PMeshInstance.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Pond.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3River.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Shape.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3ShapeExtra.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3ShapeMgr.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Skin.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Sky.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3SkyMng.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3SndMgr.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3SndObj.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3SndObjStream.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Star.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Sun.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Texture.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3Transform.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3TransformCollision.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIArea.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIBase.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIButton.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIEdit.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIImage.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIList.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIProgress.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIScrollBar.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIStatic.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UIString.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UITooltip.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3UITrackBar.cpp" />
-    <ClCompile Include="..\engine\N3Base\N3VMesh.cpp" />
-    <ClCompile Include="..\engine\N3Base\WaveFile.cpp" />
+    <ClCompile Include="$(SrcDir)\common\Implode.cpp" />
+    <ClCompile Include="$(SrcDir)\common\JvCryption.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\JpegFile.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\DFont.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\Jpeg.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\LogWriter.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimatedTexures.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimControl.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimKey.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Board.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Camera.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Chr.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Cloak.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Cloud.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ColorChange.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXBundle.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBase.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBillBoard.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBottomBoard.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXParticle.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartParticles.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPlug.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPMeshInstance.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXShape.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GERain.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GESnow.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GlobalEffect.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3IMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Joint.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Light.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Log.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Mesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Moon.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Pond.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3River.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Shape.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ShapeExtra.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ShapeMgr.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Skin.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Sky.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3SkyMng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3SndMgr.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3SndObj.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3SndObjStream.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Star.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Sun.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Transform.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3TransformCollision.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIArea.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIBase.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIButton.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIEdit.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIImage.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIList.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIProgress.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIScrollBar.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIStatic.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UIString.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UITooltip.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3UITrackBar.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3VMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\WaveFile.cpp" />
     <ClCompile Include="APISocket.cpp" />
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="BirdMng.cpp" />
