--- a/src/server/AIServer/AIServer.vcxproj.filters
+++ b/src/server/AIServer/AIServer.vcxproj.filters
@@ -137,7 +137,7 @@
     <ClCompile Include="N3BASE\N3ShapeMgr.cpp">
       <Filter>N3Base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\common\Implode.cpp">
+    <ClCompile Include="$(SrcDir)\common\Implode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -280,10 +280,10 @@
     <ClInclude Include="N3BASE\StdAfxBase.h">
       <Filter>N3Base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\Implode.h">
+    <ClInclude Include="$(SrcDir)\common\Implode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\N3Utils.h">
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
