--- a/src/server/Aujard/Aujard.vcxproj.filters
+++ b/src/server/Aujard/Aujard.vcxproj.filters
@@ -59,7 +59,7 @@
     <ClInclude Include="STLMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\N3Utils.h">
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
