--- a/src/tool/N3Viewer/N3Viewer.vcxproj
+++ b/src/tool/N3Viewer/N3Viewer.vcxproj
@@ -121,47 +121,47 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\engine\N3Base\N3Log.cpp" />
-    <ClCompile Include="..\Widget\PropertyList.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AnimControl.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AnimKey.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Board.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Camera.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Chr.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXBundle.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPartBase.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPartBillBoard.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPartBottomBoard.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXParticle.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPartMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPartParticles.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPlug.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXPMeshInstance.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3FXShape.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3IMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Joint.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Light.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Mesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3PMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3PMeshCreate.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3PMeshInstance.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Scene.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Shape.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3ShapeExtra.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3ShapeMod.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Skin.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Transform.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3TransformCollision.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3VMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\Pick.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Log.cpp" />
+    <ClCompile Include="$(SrcDir)\tool\Widget\PropertyList.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimControl.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimKey.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Board.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Camera.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Chr.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXBundle.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBase.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBillBoard.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartBottomBoard.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXParticle.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPartParticles.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPlug.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXPMeshInstance.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3FXShape.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3IMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Joint.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Light.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Mesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMeshCreate.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Scene.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Shape.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ShapeExtra.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ShapeMod.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Skin.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Transform.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3TransformCollision.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3VMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\Pick.cpp" />
     <ClCompile Include="DlgBrowsePath.cpp" />
     <ClCompile Include="DlgPMeshCreateOption.cpp" />
     <ClCompile Include="DlgPMeshEdit.cpp" />
@@ -178,51 +178,51 @@
     <ClCompile Include="ViewSceneTree.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\common\N3Utils.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Log.h" />
-    <ClInclude Include="..\Widget\PropertyList.h" />
-    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\..\engine\N3Base\My_Macro.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AnimControl.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AnimKey.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Board.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Camera.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Chr.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXBundle.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPartBase.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPartBillBoard.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPartBottomBoard.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXParticle.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPartMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPartParticles.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPlug.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXPMeshInstance.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3FXShape.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3IMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Joint.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Light.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Mesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Mng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3PMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3PMeshCreate.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3PMeshInstance.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Scene.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Shape.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3ShapeExtra.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3ShapeMod.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Skin.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Transform.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3TransformCollision.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3VMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\Pick.h" />
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Log.h" />
+    <ClInclude Include="$(SrcDir)\tool\Widget\PropertyList.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\My_Macro.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimControl.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimKey.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Base.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Board.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Camera.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Chr.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXBundle.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBase.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBillBoard.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartBottomBoard.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXParticle.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPartParticles.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPlug.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXPMeshInstance.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3FXShape.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3IMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Joint.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Light.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Mesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Mng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMeshCreate.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Scene.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Shape.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ShapeExtra.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ShapeMod.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Skin.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Transform.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3TransformCollision.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3VMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\Pick.h" />
     <ClInclude Include="DlgBrowsePath.h" />
     <ClInclude Include="DlgPMeshCreateOption.h" />
     <ClInclude Include="DlgPMeshEdit.h" />
