--- a/src/tool/SkyViewer/SkyViewer.vcxproj
+++ b/src/tool/SkyViewer/SkyViewer.vcxproj
@@ -121,36 +121,36 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\engine\N3Base\N3Log.cpp" />
-    <ClCompile Include="..\Widget\PropertyList.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AnimKey.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Camera.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Cloud.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3ColorChange.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3GERain.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3GESnow.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3GlobalEffect.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3GlobalEffectMng.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3IMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Light.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Moon.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3PMesh.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3PMeshInstance.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Shape.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Sky.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3SkyMng.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Star.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Sun.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Transform.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3TransformCollision.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3VMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Log.cpp" />
+    <ClCompile Include="$(SrcDir)\tool\Widget\PropertyList.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AnimKey.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Camera.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Cloud.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3ColorChange.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GERain.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GESnow.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GlobalEffect.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3GlobalEffectMng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3IMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Light.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Moon.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMesh.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Shape.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Sky.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3SkyMng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Star.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Sun.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Transform.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3TransformCollision.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3VMesh.cpp" />
     <ClCompile Include="FormViewProperty.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="SkyViewer.cpp" />
@@ -162,39 +162,39 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\common\N3Utils.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Log.h" />
-    <ClInclude Include="..\Widget\PropertyList.h" />
-    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AnimKey.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Camera.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Cloud.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3ColorChange.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3GERain.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3GESnow.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3GlobalEffect.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3GlobalEffectMng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3IMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Light.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Mng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Moon.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3PMesh.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3PMeshInstance.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Shape.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Sky.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3SkyMng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Star.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Sun.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Transform.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3TransformCollision.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3VMesh.h" />
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Log.h" />
+    <ClInclude Include="$(SrcDir)\tool\Widget\PropertyList.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AnimKey.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Base.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Camera.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Cloud.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3ColorChange.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GERain.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GESnow.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GlobalEffect.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3GlobalEffectMng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3IMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Light.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Mng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Moon.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMesh.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3PMeshInstance.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Shape.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Sky.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3SkyMng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Star.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Sun.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Transform.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3TransformCollision.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3VMesh.h" />
     <ClInclude Include="FormViewProperty.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="SkyViewer.h" />
