--- a/src/server/LoginServer/LoginServer.vcxproj.filters
+++ b/src/server/LoginServer/LoginServer.vcxproj.filters
@@ -95,7 +95,7 @@
     <ClInclude Include="VersionSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\N3Utils.h">
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
