--- a/src/tool/N3TexViewer/N3TexViewer.vcxproj
+++ b/src/tool/N3TexViewer/N3TexViewer.vcxproj
@@ -121,15 +121,15 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\engine\N3Base\N3Log.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\LogWriter.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
-    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Log.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\LogWriter.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="$(SrcDir)\engine\N3Base\N3Texture.cpp" />
     <ClCompile Include="DlgFormat.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="N3TexViewer.cpp" />
@@ -142,17 +142,17 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\common\N3Utils.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Log.h" />
-    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\..\engine\N3Base\LogWriter.h" />
-    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
-    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Log.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\LogWriter.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Base.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="$(SrcDir)\engine\N3Base\N3Texture.h" />
     <ClInclude Include="DlgFormat.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="N3TexViewer.h" />
